--- a/reader/meet-unknowed-self/index.html
+++ b/reader/meet-unknowed-self/index.html
@@ -74,7 +74,13 @@
             cursor: pointer;
         }
 
-        nav .button:hover{
+        nav .button_active{
+            border: 1px solid #333;
+            font-size: 10pt;
+            font-weight: bold;
+            padding: 8px;
+            border-radius: 4px;
+            cursor: pointer;
             background-color: #E8D86A;
             color: #7879DA;
         }
@@ -86,10 +92,17 @@
         nav ul a {
             color: #333;
             text-decoration: none;
+            display: inline;
+            padding-left: 10px;
+            padding-right: 10px;
         }
 
         nav ul a:hover {
             text-decoration: underline;
+        }
+
+        nav ul a:visited{
+            background-color: #DADEFA;
         }
 
         nav li {
@@ -209,7 +222,9 @@
             }
 
             nav {
-                position: absolute;
+                position: fixed;
+                top: 0;
+                overflow-y: hidden; 
                 width: 100%;
                 height: 48px;
             }
@@ -229,12 +244,14 @@
                 padding: 0 0 0 8px;
             }
 
-            nav #java-nav-directory{
+            nav #java-nav-directory,#js-nav-directory{
                 display: none;
+                height: 90%;
+                overflow-y: auto;
             }
 
-            nav #js-nav-directory{
-                display: none;
+            nav ul a:active{
+                color: #ABCDEF;
             }
 
             nav .level2 {
@@ -748,25 +765,35 @@
             };
         createPostDirectory(document.getElementById('article-content'), document.getElementById('js-nav-directory'), true);
     };
-    var javaDirEle = document.getElementById('java-nav-directory');
-    var useJavaDir = true;
-    if (null != javaDirEle && javaDirEle.innerHTML == "") {
+    /*初始化加载js-dir*/
+    var dirEle = document.getElementById('java-nav-directory');
+    if (null != dirEle && dirEle.innerHTML == "") {
         articleDirectoryBuild();
-        useJavaDir = false;
+        var dirEle = document.getElementById('js-nav-directory');
     }
-
+    /*移动端目录事件定义*/
     var mediaMenubar = document.getElementById("mediaMenubar");
     if(null != mediaMenubar){
+        var dirLinkEvent = false;
         mediaMenubar.onclick = function(){
-            var dirEle = javaDirEle;
-            if(!useJavaDir){
-                var dirEle = document.getElementById('js-nav-directory');
-            }
             var style = window.getComputedStyle(dirEle);
             if(style.display == "none"){
+                this.className = "button_active";
                 dirEle.style.display = "block";
                 document.getElementsByTagName("nav")[0].style.height = "auto";
             }else {
+                this.className = "button";
+                dirEle.style.display = "none";
+                document.getElementsByTagName("nav")[0].style.height = "48px";
+            }
+            dirLinkEvent = true;
+        };
+    }
+    var aLink = dirEle.getElementsByTagName("a");
+    for(i = 0;i < aLink.length;i++){
+        aLink[i].onclick = function(){
+            this.style.background = "#DADEFA";
+            if(dirLinkEvent){
                 dirEle.style.display = "none";
                 document.getElementsByTagName("nav")[0].style.height = "48px";
             }
