--- a/reader/index.html
+++ b/reader/index.html
@@ -3,10 +3,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<title>guide</title>
+		<title>我的博客·读书手札</title>
 		<link rel="stylesheet" href="static/css/bootstrap.min.css" />
 		<script type="text/javascript" src="static/js/jquery-1.10.1.min.js" ></script>
 		<script type="text/javascript" src="static/js/bootstrap.min.js" ></script>
+		<script type="text/javascript" src="static/js/laytpl.js" ></script>
 	</head>
 	<style>
 		body{
@@ -66,33 +67,44 @@
 				<h2 onclick="javascript:location.href='/blog'" style="cursor: pointer;">PetterObam BLOG</h2>
 				<p>我的博客读书手札</p>
 			</div>
-			<div class="row">
+			<div id="book-list" class="row">
 
 			</div>
 		</div>
 	</body>
+	<script id="book-list-tpl" type="text/html">
+		{{# for(var i = 0;i < d.length;i++){ }}
+			<div class="col-sm-6 col-md-4 col-lg-3">
+					<div class="thumbnail">
+						<a href="{{ d[i].itemHref }}" target="_blank" title="{{ d[i].itemName }}">
+							<img src="{{ d[i].imgHref }}" width="300" height="150" alt="{{ d[i].itemName }}"/>
+						</a>
+						<div class="caption">
+							<h3>
+								<a href="{{ d[i].itemHref }}" target="_blank" title="{{ d[i].itemName }}">{{ d[i].itemName }}</a>
+							</h3>
+							<a href="{{ d[i].itemHref }}" target="_blank" title="{{ d[i].content }}">
+								<p class="content">{{ d[i].content }}</p>
+							</a>
+						</div>
+					</div>
+			</div>
+		{{# } }}
+	</script>
 	<script>
-		var itemsArray = [
-			{
-				itemHref: 'meet-unknowed-self/index.html',
-				itemName: '遇见未知的自己',
-				imgHref: '/reader/meet-unknowed-self/book.jpg',
-				content: '偶然迷茫的时候看到这本书，于是记录下来；希望当我下次再迷茫的时候我能再次翻开这本书，得到不一样的解读...'
-			}
-		]
+		$(function(){
+			var data = [
+				{
+					itemHref: 'meet-unknowed-self/index.html',
+					itemName: '遇见未知的自己',
+					imgHref: 'meet-unknowed-self/book.jpg',
+					content: '偶然迷茫的时候看到这本书，于是记录下来；希望当我下次再迷茫的时候我能再次翻开这本书，得到不一样的解读...'
+				}
+			];
 
-		var html = '';
-		for(var i=0; i<itemsArray.length; i++){
-			html+= '<div class="col-sm-6 col-md-4 col-lg-3">';
-			html+= '<div class="thumbnail">';
-			html+= '<a href="'+itemsArray[i].itemHref+'" target="_blank" title="'+itemsArray[i].itemName+'">';
-			html+= '<img src="'+itemsArray[i].imgHref+'" width="300" height="150" alt="'+itemsArray[i].itemName+'"/>';
-			html+= '</a><div class="caption">';
-			html+= '<h3><a href="'+itemsArray[i].itemHref+'" target="_blank" title="'+itemsArray[i].itemName+'">'+itemsArray[i].itemName+'</a><br>';
-			html+= '</h3><a href="'+itemsArray[i].itemHref+'" target="_blank" title="'+itemsArray[i].content+'"><p class="content">' + itemsArray[i].content + '</p>';
-			html+= '</a></div></div></div>';
-		}
-
-		$('.row').html(html);
+			laytpl($("#book-list-tpl").html()).render(data, function(html){
+			  $("#book-list").html(html);
+			});
+		});
 	</script>
 </html>
