--- a/reader/index.html
+++ b/reader/index.html
@@ -65,7 +65,7 @@
 		<div class="container">
 			<div class="project-header">
 				<h2 onclick="javascript:location.href='/blog'" style="cursor: pointer;">PetterObam BLOG</h2>
-				<p>我的博客读书手札</p>
+				<p>我的博客·读书手札</p>
 			</div>
 			<div id="book-list" class="row">
 
