--- a/reader/index.html
+++ b/reader/index.html
@@ -74,7 +74,7 @@
 <body>
     <div class="container">
         <div class="project-header">
-            <h2 onclick="javascript:location.href='/blog'" style="cursor: pointer;">PetterObam BLOG</h2>
+            <h2 onclick="javascript:location.href='/blog'" style="cursor: pointer;">欧阳Boy_Petter's Blog</h2>
             <p>我的博客·读书手札</p>
         </div>
         <div id="book-list" class="row">
