--- a/QQ/zone/1460300366/说说/2013.html
+++ b/QQ/zone/1460300366/说说/2013.html
@@ -1,3 +1,4 @@
+{% raw %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -474,3 +475,4 @@ qzappitem{position:absolute;zoom:1;left:0;top:0;margin-bottom:10px;color:#545454
 	</div>
 </body>
 </html>
+{% endraw %}
