--- a/QQ/zone/1460300366/index.html
+++ b/QQ/zone/1460300366/index.html
@@ -5,22 +5,8 @@ header: QQ空間
 description: "这里展示了QQ空間."
 group: navigation
 ---
-{% raw %}
 <style>
-  html,
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: "微软雅黑";
-    width: 100%;
-    height: 100%;
-  }
-
-  a:hover {
-    text-decoration: none;
-  }
-
-  .project-header {
+  .qq-container .project-header {
     width: 60%;
     text-align: center;
     margin: 60px 0 10px;
@@ -33,37 +19,22 @@ group: navigation
     border-bottom: 1px solid #eee;
   }
 
-  h3 {
-    font-size: 22px;
+  .qq-container .tab-title {
     text-align: center;
   }
 
-  small {
-    color: #777;
-  }
-
-  .content {
-    font-size: 10px;
-    color: black;
-  }
-
-  .tab-title {
-    text-align: center;
-  }
-
-  .tab-title a:hover {
+  .qq-container .tab-title a:hover {
     text-decoration: underline;
     color: red;
   }
 
-  .tab-title a:active {
+  .qq-container .tab-title a:active {
     text-decoration: underline;
     color: red;
   }
 </style>
-<div class="container">
+<div class="qq-container">
   <div class="project-header">
-    <h2> <a href="javascript:location.href='/blog'" style="cursor: pointer;">PetterObam BLOG</a> * QQ空间[1460300366]</h2>
     <p class="tab-title">
       <a href="日志/index.html" active target="zone-content">日志</a>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -77,4 +48,3 @@ group: navigation
     </iframe>
   </div>
 </div>
-{% endraw %}
