adjust collect rule

--- a/life/index.html
+++ b/life/index.html
@@ -5,4 +5,4 @@ header: 生活动态
 description: "这里展示了生活动态."
 group: navigation
 ---
-{% include helpers/timeline %}
+{% include helpers/timeline_life_list %}
